src-tauri/tests/snapshots/wire_format__workspaces_create_request_args.snap
---
source: tests/wire_format.rs
expression: request_args
---
{
  "existingBranch": false,
  "name": "Feature X",
  "placement": "worktree",
  "projectId": "00000000-0000-0000-0000-000000000001",
  "sourceBranch": {
    "branch": "main",
    "type": "local"
  },
  "workspaceBranch": null
}
