src-tauri/tests/snapshots/wire_format__workspaces_error_envelope_dirty_tree.snap
---
source: tests/wire_format.rs
expression: "serde_json::to_value(&err).unwrap()"
---
{
  "changed_files": [
    "src/lib.rs",
    "Cargo.lock"
  ],
  "code": "dirty_tree",
  "message": "project working tree is dirty"
}
