src-tauri/tests/snapshots/wire_format__workspaces_list_request_args.snap
---
source: tests/wire_format.rs
expression: request_args
---
{
  "projectId": "00000000-0000-0000-0000-000000000001"
}
